Custom Item Flags, Release 2.1.2, Support for Spigot/Paper 1.21.7 (#13)
* adding custom item flag to hide item lore parts

* Introducde base for flagmanagers and added item flags in the items description (+ config values)

* Removed HideFlags and introduced them as CustomItemFlag

* Fix message formatting

* Cleanup god flags, prepare release 2.1.2

* Add version support for 1.21.7

* comment correction